--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/firestore": "^22.4.0",
     "@react-navigation/native": "^7.1.14",
+    "firebase": "^11.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1"
   },
