--- a/package.json
+++ b/package.json
@@ -13,12 +13,22 @@
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/firestore": "^22.4.0",
     "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "firebase": "^11.10.0",
     "react": "19.1.0",
-    "react-native": "0.80.1"
+    "react-native": "0.80.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-permissions": "^5.4.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.0",
+    "react-native-vision-camera": "^4.7.0",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "19.0.0",
