--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/auth": "^22.4.0",
     "@react-native-firebase/firestore": "^22.4.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "@reduxjs/toolkit": "^2.8.2",
     "firebase": "^11.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
@@ -23,6 +25,7 @@
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.0",
     "react-native-vision-camera": "^4.7.0",
+    "react-redux": "^9.2.0",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0"
   },
