--- a/package.json
+++ b/package.json
@@ -10,25 +10,32 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@gorhom/bottom-sheet": "^5.2.6",
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/auth": "^22.4.0",
     "@react-native-firebase/firestore": "^22.4.0",
+    "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.8.2",
     "firebase": "^11.10.0",
+    "lucide-react-native": "^0.544.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-date-picker": "^5.0.13",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-permissions": "^5.4.1",
+    "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.0",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "^15.13.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vision-camera": "^4.7.0",
     "react-native-wheel-color-picker": "^1.3.1",
+    "react-native-worklets": "^0.6.0",
     "react-redux": "^9.2.0",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0"
