feat: Implement core application features including onboarding, authentication, receipt scanning, AI analysis, and expense management with Firebase integration.

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ local.properties
 
 
 .env
-/android/app/google-services.json
+/android/app/# google-services.json
 /ios/GoogleService-Info.plist
 # node.js
 #
